# zssh2

./: .gitignore  INSTALL  Makefile.in  README  README.md  VERSION  acconfig.h  completion.c  configure.ac  configure.in  doit.c  escape.c  escape_multi.c  fun.h  globbing.c  init.c  main.c  misc.c  openpty.c  parse.h  pc_test_escapes.c  quote_removal.c  signal.c  split_words.c  tilde_expansion.c  util.c  version.h  zmodem.c  zmodem_act.c  zssh.1  zssh.h  zssh.spec.tpl  zssh2.1
fake_readline/: Makefile.in
test/: Makefile.in  signal_test.c
